--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+setuptools
+wheel
+
 Flask==2.3.3
 pandas==2.0.3
 numpy==1.24.3
@@ -6,5 +9,5 @@ statsmodels==0.14.0
 tqdm==4.65.0
 openpyxl==3.1.2
 kaleido==0.3.0
-gunicorn==21.2.0
+gunicorn==23.0.0
 python-dotenv==1.0.0
